# discord-irc-bridge

./: Cargo.toml  Makefile.toml  README.md  deny.toml
.docker/: dev.Dockerfile  prod.Dockerfile  test.Dockerfile
.github/ISSUE_TEMPLATE/: 0-bug.yml
.github/workflows/: cd.yml  ci.yml
infra/: dev.compose.yml  test.compose.yml
infra/env/: dev.env  test.env
src/: config.rs  lib.rs  main.rs  queue.rs  types.rs
src/discord/: receiver.rs  sender.rs
src/irc/: mod.rs
