[package]
name = "discord-irc-bridge"
version = "1.0.0"
edition = "2024"
repository = "https://github.com/lsck0/discord-irc-bridge"
authors = ["Luca Sandrock"]
license = "MIT"
build = "build/build.rs"

[features]
default = []

[lib]
path = "src/lib.rs"

[[bin]]
name = "discord-irc-bridge"
path = "src/main.rs"
test = false

[profile.release]
codegen-units = 1
debug = true
lto = "fat"
opt-level = 3
panic = "abort"

[profile.dev]
debug = true
lto = "off"
opt-level = 0

[dependencies]
anyhow = "=1.0.102"
dotenvy = "=0.15.7"
irc = "=1.1.0"
poise = { version = "=0.6.1", features = ["cache"] }
reqwest = { version = "=0.13.2", features = ["json"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
tokio = { version = "=1.50.0", features = ["full"] }
tokio-stream = "=0.1.18"
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.23", features = ["env-filter", "json"] }

[dev-dependencies]
wiremock = "=0.6.5"
